# climb

./: .gitignore  CLAUDE.md  README.md  __main__.py  ai_processor.py  app.py  build.bat  climb.spec  config.json  paths.py  pyproject.toml  requirements.txt  scraper.py  test_ai_processor.py  test_scraper.py  test_task_runner.py  urls.txt
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extension/extractors/: facebook.js  generic.js  instagram.js
gui/: __init__.py  app.py  theme.py
gui/tabs/: __init__.py  ai_process.py  article_browser.py  batch_fetch.py  extension_tab.py  log_viewer.py  ptt_board.py  settings.py  single_fetch.py
gui/widgets/: __init__.py  progress_panel.py  result_table.py  url_input.py
gui/workers/: __init__.py  api_server.py  log_handler.py  task_runner.py
