[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climb-vet"
version = "0.1.0"
description = "CLIMB — 獸醫社群內容擷取與整理系統"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "playwright>=1.40.0",
    "anthropic>=0.39.0",
    "customtkinter>=5.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyinstaller>=6.0"]

[project.scripts]
climb = "app:main_gui"
climb-scraper = "scraper:main"
climb-ai = "ai_processor:main"

[tool.setuptools]
py-modules = ["app", "scraper", "ai_processor", "paths"]
packages = ["gui", "gui.tabs", "gui.widgets", "gui.workers"]

[tool.setuptools.package-data]
"*" = ["config.json"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
